<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".Fragments.IndicatorsFragment">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/mode_auto_text"
                android:layout_width="206dp"
                android:layout_height="match_parent"
                android:background="@color/textIndicatorBack"
                android:gravity="center"
                android:text="@string/air_temperature_text"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textColorHighlight="@color/purple_700"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:ignore="TextContrastCheck"
                tools:text="@string/air_temperature_text" />

            <TextView
                android:id="@+id/air_humidity_text"
                android:layout_width="206dp"
                android:layout_height="wrap_content"
                android:background="@color/textIndicatorBack"
                android:gravity="center"
                android:text="@string/air_humidity_text"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textColorHighlight="@color/purple_700"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:ignore="TextContrastCheck"
                tools:text="@string/air_humidity_text" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="150dp"><![CDATA[

            />

            ]]>

            <TextView
                android:id="@+id/air_temperature_value"
                android:layout_width="206dp"
                android:layout_height="108dp"
                android:gravity="center"
                android:text="@string/air_humidity_value"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textColorHighlight="@color/purple_700"
                android:textSize="34sp"
                android:textStyle="bold"
                tools:text="@string/air_temperature_value" />

            <TextView
                android:id="@+id/air_humidity_value"
                android:layout_width="206dp"
                android:layout_height="108dp"
                android:gravity="center"
                android:text="@string/air_humidity_value"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textColorHighlight="@color/purple_700"
                android:textSize="34sp"
                android:textStyle="bold"
                tools:text="@string/air_humidity_value" />/>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/manual_control_text"
                android:layout_width="206dp"
                android:layout_height="match_parent"
                android:background="@color/textIndicatorBack"
                android:gravity="center"
                android:text="@string/ground_humidity_text"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textColorHighlight="@color/purple_700"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:ignore="TextContrastCheck"
                tools:text="@string/ground_humidity_text" />

            <TextView
                android:id="@+id/water_level_text"
                android:layout_width="206dp"
                android:layout_height="wrap_content"
                android:background="@color/textIndicatorBack"
                android:gravity="center"
                android:text="@string/water_level_text"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textColorHighlight="@color/purple_700"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:ignore="TextContrastCheck"
                tools:text="@string/water_level_text" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="150dp"><![CDATA[

            />

            ]]>

            <TextView
                android:id="@+id/ground_humidity_value"
                android:layout_width="206dp"
                android:layout_height="108dp"
                android:gravity="center"
                android:text="@string/ground_humidity_value"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textColorHighlight="@color/purple_700"
                android:textSize="34sp"
                android:textStyle="bold"
                tools:text="@string/ground_humidity_value" />

            <TextView
                android:id="@+id/water_level_value"
                android:layout_width="206dp"
                android:layout_height="108dp"
                android:gravity="center"
                android:text="@string/water_level_value"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textColorHighlight="@color/purple_700"
                android:textSize="34sp"
                android:textStyle="bold"
                tools:text="@string/water_level_value" /><![CDATA[

            />
        ]]>
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/periodic_mode_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_span="2"
                android:background="@color/textIndicatorBack"
                android:text="@string/pump_indicator_text"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textColorHighlight="@color/purple_700"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="TextContrastCheck" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/pump_indicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="120dp"
                android:layout_marginVertical="10dp"
                android:layout_span="2"
                android:backgroundTint="@color/black"
                android:clickable="false"
                android:fitsSystemWindows="true"
                android:text="@string/pump_indicator"
                android:textColor="@color/white"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/peridoc_time_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="2"
                android:background="@color/textIndicatorBack"
                android:gravity="center"
                android:text="@string/pump_time_text"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textColorHighlight="@color/purple_700"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="TextContrastCheck" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >


            <Chronometer
                android:id="@+id/pump_time"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_span="2"
                android:textSize="30sp"
                android:textStyle="bold"
                android:textAlignment="center"
                android:textColor="@color/black"
                />


        </TableRow>


    </TableLayout>

</FrameLayout>