<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    tools:context=".Fragments.IndicatorsFragment">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/manual_control_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_span="2"
                android:background="@color/textIndicatorColor"
                android:gravity="center"
                android:text="@string/manuaL_mode_text"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textColorHighlight="@color/purple_700"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="TextContrastCheck"
                tools:text="@string/manuaL_mode_text" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/start_button"
                android:layout_width="203dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:backgroundTint="@color/purple_200"
                android:enabled="true"
                android:text="@string/start_button"
                android:textSize="20sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/stop_button"
                android:layout_width="206dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="10dp"
                android:backgroundTint="@color/purple_200"
                android:enabled="true"
                android:text="@string/stop_button"
                android:textSize="20sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/mode_auto_text"
                android:layout_width="206dp"
                android:layout_height="match_parent"
                android:layout_span="2"
                android:background="@color/textIndicatorColor"
                android:gravity="center"
                android:text="@string/auto_mode_text"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textColorHighlight="@color/purple_700"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="TextContrastCheck"
                tools:text="@string/auto_mode_text" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <Switch
                android:id="@+id/auto_mode_switch"
                android:layout_width="129dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginVertical="20dp"
                android:layout_span="2"
                android:gravity="center"
                android:minHeight="48dp"
                android:text="@string/auto_mode_value"
                android:textSize="20sp"
                android:textStyle="bold" />


        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <TextView
                android:id="@+id/activation_time_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_span="2"
                android:background="@color/textIndicatorColor"
                android:gravity="center"
                android:text="@string/activation_time"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textColorHighlight="@color/purple_700"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="TextContrastCheck"
                tools:text="@string/activation_time" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TimePicker
                android:id="@+id/activation_time"
                style="@android:style/Widget.Material.Light.TimePicker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="2"
                android:timePickerMode="spinner" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/periodic_mode_text"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_span="2"
                android:background="@color/textIndicatorColor"
                android:text="@string/periodic_mode_text"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textColorHighlight="@color/purple_700"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="TextContrastCheck" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Switch
                android:id="@+id/periodic_mode_switch"
                android:layout_width="129dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginVertical="20dp"
                android:layout_span="2"
                android:gravity="center"
                android:minHeight="48dp"
                android:text="@string/periodic_mode_value"
                android:textSize="20sp"
                android:textStyle="bold" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/peridoc_time_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_span="2"
                android:background="@color/textIndicatorColor"
                android:gravity="center"
                android:text="@string/periodic_delay"
                android:textAlignment="center"
                android:textColor="@color/white"
                android:textColorHighlight="@color/purple_700"
                android:textSize="24sp"
                android:textStyle="bold"
                tools:ignore="TextContrastCheck" />

        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent" >

            <SeekBar
                android:id="@+id/repeat_days"
                style="@android:style/Widget.Material.SeekBar.Discrete"
                android:layout_width="wrap_content"
                android:layout_height="32dp"
                android:layout_span="2"
                android:max="30"
                android:progress="3" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center">

            <TextView
                android:id="@+id/repeatDaysIndicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:layout_gravity="center"
                android:layout_span="2" />
        </TableRow>


    </TableLayout>

</FrameLayout>